Bug 276343 - Incorrect message is displayed when move of messages to trash and elsewhere is completed
Summary: Incorrect message is displayed when move of messages to trash and elsewhere i...
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: mail (other bugs)
Version First Reported In: 4.4.10
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-23 18:04 UTC by Robert Simmons
Modified: 2011-11-17 13:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments
Screen capture of the problem (2.57 KB, image/png)
2011-06-23 18:04 UTC, Robert Simmons
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Simmons 2011-06-23 18:04:49 UTC
Created attachment 61283 [details]
Screen capture of the problem

Version:           4.4.10 (using KDE 4.6.4) 
OS:                Linux

When you move a message from the inbox to the trash or to another folder, the message that is displayed is "Moving messages to trash cancelled."  This is incorrect. It should say "Moving messages to trash completed."  or something like that.  I am using IMAP and all of my folders including trash are on the IMAP server.

Reproducible: Always

Steps to Reproduce:
Using an IMAP server with the trash folder located on the server:
1) move a message from inbox to trash either by the trash button or a regular right click move.
2) Read the message displayed in the lower left corner.

Actual Results:  
"Moving messages to trash cancelled."  is displayed.

Expected Results:  
"Moving messages to trash completed."  or something like this that fits the other messages in KMail/Kontact

I am using Kubuntu 11.04 and KDE 4.6.4
Comment 1 Laurent Montel 2011-11-17 13:22:18 UTC
Git commit 737c514ed6b2908935aa22cdb9dd33461c24c557 by Montel Laurent.
Committed on 17/11/2011 at 14:21.
Pushed by mlaurent into branch 'master'.

Fix Bug 276343 - Incorrect message is displayed when move of messages to trash and elsewhere is completed

FIXED-IN: 4.7.4
BUG: 276343

M  +1    -1    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/737c514ed6b2908935aa22cdb9dd33461c24c557
Comment 2 Laurent Montel 2011-11-17 13:23:19 UTC
Git commit 48a1a331a55fb34267ee2db201edbdf48211b330 by Montel Laurent.
Committed on 17/11/2011 at 14:21.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 276343 - Incorrect message is displayed when move of messages to trash and elsewhere is completed

FIXED-IN: 4.7.4
BUG: 276343
(cherry picked from commit 737c514ed6b2908935aa22cdb9dd33461c24c557)

M  +1    -1    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/48a1a331a55fb34267ee2db201edbdf48211b330