Fix Bug 276343 - Incorrect message is displayed when move of messages to trash and elsewhere is completed

FIXED-IN: 4.7.4
BUG: 276343